[package]
name = "ppjson"
version = "0.1.0"
authors = ["j0no <jmarcelsw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
open = "1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[[bin]]
name = "ppjson"
path = "src/main.rs"